# tools

./: .cursorignore  .dockerignore  .env_template  .env_test  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt  ws_install_venv.ps1
.cursor/: guidelines
.github/: CODEOWNERS
.github/workflows/: protect.yml
ai_prompts/: __init__.py  extraction.py  generation.py  images.py  prompt_manager.py
ai_tools/: __init__.py  aws_bedrock.py  call_models.py  completion.py  images.py  phone_calls.py  tts.py
aisuite/: client.py  provider.py
aisuite/framework/: __init__.py  chat_completion_response.py  choice.py  message.py  provider_interface.py
aisuite/providers/: anthropic_provider.py  aws_provider.py  azure_provider.py  deepseek_provider.py  fireworks_provider.py  gcp_provider.py  google_provider.py  groq_provider.py  huggingface_provider.py  mistral_provider.py  ollama_provider.py  openai_provider.py  together_provider.py
async_tasks/: README.md  __init__.py  celery.py
aws/: __init__.py  aws_storage.py  requirements.txt
aws/tests/: __init__.py  aws_storage_test.py
config/: README.md  __init__.py  celery.py  py_settings.py  settings.py
excel_tools/: AI_Integrated.xlsm  LICENSE  README.md
plantillas-biblioteca-ia/: README.md  plantilla-book-note.md  plantilla-index.md  plantilla-topic-moc.md  prompt-agregar-libros.txt
sql_tester/: dblite.py  synthetic_data.py
sql_tester/create_tables/: product_nomenclature.sql  transactions.sql
sql_tester/local_db/: db.sqlite3
sql_tester/queries/: client_sales_query.sql  revenue_query_with_alias.sql
sql_tester/tests/: sql_queries_test.py
sql_tester/tests/data/: client_sales_query.csv  product_nomenclature.csv  pubmed_sample.json  revenue_query_with_alias.csv  transactions.csv
vizz_app/: streamlit_app.py
